# libqcnpuperf

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build-deb.yml
debian/: changelog  control  copyright  libqcnpuperf-dev.install  libqcnpuperf1.install  qcnpuperfd.install  rules
examples/: qcnpuperf_cli.c  qcnpuperfd.c  qcnpuperfd.service
inc/: qcom_dsp.h  qcom_dsp_types.h
src/: dspquery_stub.c  qcnpuperf.map  qcom_dsp.c  qcom_dsp_arch.c  qcom_dsp_priv.h
